--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -12,11 +12,17 @@
 		&__b-margin-until-medium{
 		margin-bottom: 0rem;
 		}
-
+ 
 		&__medium-4 {
 		float: left;
 		width: 33.33%
 		}
+
+		&__medium-6 {
+		float: left;
+		width: 50%;
+		}
+
 
 		&__medium-8 {
 		float: left;
@@ -37,10 +43,21 @@
 		margin-right: -65px;
 	}
 
+	&--gutters-large{
+		margin-right: -100px; 
+	}
+
+
 	&--gutters > div{
 		padding-right: 65px;
 
 	}
+
+	&--gutters-large > div{
+		padding-right: 100px;
+
+	}
+
 
 
 }
