--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -11,6 +11,11 @@
 		font-weight: 500;
 	}
 
+
+	&--blue{
+		color:$mainBlue;
+	}
+
 	&__icon{
 		display: block;
 		margin-right: auto;
@@ -18,6 +23,8 @@
 		margin-bottom: 0.5rem;
 
 		@mixin atSmall{
+			position:relative;
+			top:8px;
 			margin-right: .5rem;
 			margin-left: 0;
 			margin-bottom: 0;
