--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,7 +1,14 @@
 .testimonial{
 	background-color: rgba(255,255,255,.8);
-	padding: 0 1.8125rem 1px 1.8125rem;
+	padding: 0 18px 1px 18px;
+	margin-bottom: 98px;
 
+	
+	@mixin atLarge{
+		padding: 0 1.8125rem 1px 1.8125rem;
+		margin-bottom: 0;
+	}
+	
 
 	&__photo{
 		border-radius: 50%;
@@ -28,6 +35,11 @@
 		font-weight: 400;
 		font-size: .9375rem;
 		margin:.25rem 1rem;
+	}
+
+	&--last{
+		margin-bottom: 0;
+
 	}
 
 }
